# bas55

./: .gitignore  AUTHORS  CHANGELOG.md  COPYING  ChangeLog  ChangeLog.old  Makefile.am  NEWS  README  README.md  THANKS  TODO  bootstrap  configure.ac  mkwin
data/: Makefile.am  README  SIEVE.BAS  sieve.bas
doc/: Makefile.am  bas55.texi  copyright.texi.in
ecma55/: Makefile.am  cmd.c  codedvar.c  ecma55.c  ecma55.h  err.c  grammar.y  lex.c  ngetopt.h  str.c  util.c
src/: Makefile.am  arraydsc.c  arraydsc.h  bmath.c  cmd.c  code.c  codedvar.c  data.c  datalex.c  dbg.c  dbg.h  ecma55.c  ecma55.h  edit.c  err.c  getlin.c  grammar.y  ifun.c  lex.c  line.c  list.h  ngetopt.c  ngetopt.h  parse.c  str.c  util.c  vm.c
tests/: Makefile.am  P003.eok  P004.eok  P005.ok  P006.ok  P007.eok  P007.ok  P008.BAS  P008.eok  P008.ok  P009.ok  P010.ok  P011.ok  P012.BAS  P012.ok  P013.ok  P014.ok  P015.BAS  P015.ok  P016.eok  P017.ok  P018.ok  P019.ok  P020.eok  P021.eok  P023.ok  P024.ok  P025.BAS  P025.ok  P026.BAS  P026.ok  P027.BAS  P027.ok  P028.eok  P028.ok  P029.BAS  P029.eok  P029.ok  P030.BAS  P030.eok  (+524 more)
tools/: Makefile.newton  newton.c
