# ===========================================================================
# bas55, an implementation of the Minimal BASIC programming language.
# ===========================================================================

TESTS_ENVIRONMENT = bas55=$(top_builddir)/src/bas55$(EXEEXT) \
		    srcdir=$(srcdir) \
		    builddir=$(builddir)

dist_check_SCRIPTS = p001.test p002.test p003.test p004.test p005.test \
		     p006.test p007.test p008.test p009.test p010.test \
		     p011.test p012.test p013.test p014.test p015.test \
		     p016.test p017.test p018.test p019.test p020.test \
		     p021.test p022.test p023.test p024.test p025.test \
		     p026.test p027.test p028.test p029.test p030.test \
		     p031.test p032.test p033.test p034.test p035.test \
		     p036.test p037.test p038.test p039.test p040.test \
		     p041.test p042.test p043.test p044.test p045.test \
		     p046.test p047.test p048.test p049.test p050.test \
		     p051.test p052.test p053.test p054.test p055.test \
		     p056.test p057.test p058.test p059.test p060.test \
		     p061.test p062.test p063.test p064.test p065.test \
		     p066.test p067.test p068.test p069.test p070.test \
		     p071.test p072.test p073.test p074.test p075.test \
		     p076.test p077.test p078.test p079.test p080.test \
		     p081.test p082.test p083.test p084.test p085.test \
		     p086.test p087.test p088.test p089.test p090.test \
		     p091.test p092.test p093.test p094.test p095.test \
		     p096.test p097.test p098.test p099.test p100.test \
		     p101.test p102.test p103.test p104.test p105.test \
		     p106.test \
		     p113.test p114.test p115.test \
		     p116.test p117.test p118.test p119.test p120.test \
		     p121.test p122.test p123.test p124.test p125.test \
		     p126.test p127.test p128.test p129.test p130.test \
		     p132.test p133.test p134.test p135.test \
		     p136.test p137.test p138.test p139.test p140.test \
		     p141.test p142.test p143.test p144.test p145.test \
		     p146.test p147.test p148.test p149.test p150.test \
		     p151.test p152.test p153.test p154.test p155.test \
		     p156.test p157.test p158.test p159.test p160.test \
		     p161.test p162.test p163.test p164.test p165.test \
		     p166.test p167.test p168.test p169.test p170.test \
		     p171.test p172.test p173.test p174.test p175.test \
		     p176.test p177.test p178.test p179.test p180.test \
		     p181.test p182.test p183.test p184.test p185.test \
		     p186.test p187.test p188.test p189.test p190.test \
		     p191.test p192.test p193.test p194.test p195.test \
		     p196.test p197.test p198.test p199.test p200.test \
		     p201.test p202.test p204.test p205.test \
		     p206.test p207.test p208.test \
		     printab.test printspc.test table.test truend.test \
		     pow.test

TESTS = $(dist_check_SCRIPTS)

EXTRA_DIST = README.md \
	     chkout.inc \
	     P001.BAS P002.BAS P003.BAS P004.BAS P005.BAS \
	     P001.ok P002.ok P003.ok P004.ok P005.ok \
	     P001.eok P002.eok P003.eok P004.eok P005.eok \
	     P006.BAS P007.BAS P008.BAS P009.BAS P010.BAS \
	     P006.ok P007.ok P008.ok P009.ok P010.ok \
	     P006.eok P007.eok P008.eok P009.eok P010.eok \
	     P011.BAS P012.BAS P013.BAS P014.BAS P015.BAS \
	     P011.ok P012.ok P013.ok P014.ok P015.ok \
	     P011.eok P012.eok P013.eok P014.eok P015.eok \
	     P016.BAS P017.BAS P018.BAS P019.BAS P020.BAS \
	     P016.ok P017.ok P018.ok P019.ok P020.ok \
	     P016.eok P017.eok P018.eok P019.eok P020.eok \
	     P021.BAS P022.BAS P023.BAS P024.BAS P025.BAS \
	     P021.ok P022.ok P023.ok P024.ok P025.ok \
	     P021.eok P022.eok P023.eok P024.eok P025.eok \
	     P026.BAS P027.BAS P028.BAS P029.BAS P030.BAS \
	     P026.ok P027.ok P028.ok P029.ok P030.ok \
	     P026.eok P027.eok P028.eok P029.eok P030.eok \
	     P031.BAS P032.BAS P033.BAS P034.BAS P035.BAS \
	     P031.ok P032.ok P033.ok P034.ok P035.ok \
	     P031.eok P032.eok P033.eok P034.eok P035.eok \
	     P036.BAS P037.BAS P038.BAS P039.BAS P040.BAS \
	     P036.ok P037.ok P038.ok P039.ok P040.ok \
	     P036.eok P037.eok P038.eok P039.eok P040.eok \
	     P041.BAS P042.BAS P043.BAS P044.BAS P045.BAS \
	     P041.ok P042.ok P043.ok P044.ok P045.ok \
	     P041.eok P042.eok P043.eok P044.eok P045.eok \
	     P046.BAS P047.BAS P048.BAS P049.BAS P050.BAS \
	     P046.ok P047.ok P048.ok P049.ok P050.ok \
	     P046.eok P047.eok P048.eok P049.eok P050.eok \
	     P051.BAS P052.BAS P053.BAS P054.BAS P055.BAS \
	     P051.ok P052.ok P053.ok P054.ok P055.ok \
	     P051.eok P052.eok P053.eok P054.eok P055.eok \
	     P056.BAS P057.BAS P058.BAS P059.BAS P060.BAS \
	     P056.ok P057.ok P058.ok P059.ok P060.ok \
	     P056.eok P057.eok P058.eok P059.eok P060.eok \
	     P061.BAS P062.BAS P063.BAS P064.BAS P065.BAS \
	     P061.ok P062.ok P063.ok P064.ok P065.ok \
	     P061.eok P062.eok P063.eok P064.eok P065.eok \
	     P066.BAS P067.BAS P068.BAS P069.BAS P070.BAS \
	     P066.ok P067.ok P068.ok P069.ok P070.ok \
	     P066.eok P067.eok P068.eok P069.eok P070.eok \
	     P071.BAS P072.BAS P073.BAS P074.BAS P075.BAS \
	     P071.ok P072.ok P073.ok P074.ok P075.ok \
	     P071.eok P072.eok P073.eok P074.eok P075.eok \
	     P076.BAS P077.BAS P078.BAS P079.BAS P080.BAS \
	     P076.ok P077.ok P078.ok P079.ok P080.ok \
	     P076.eok P077.eok P078.eok P079.eok P080.eok \
	     P081.BAS P082.BAS P083.BAS P084.BAS P085.BAS \
	     P081.ok P082.ok P083.ok P084.ok P085.ok \
	     P081.eok P082.eok P083.eok P084.eok P085.eok \
	     P086.BAS P087.BAS P088.BAS P089.BAS P090.BAS \
	     P086.ok P087.ok P088.ok P089.ok P090.ok \
	     P086.eok P087.eok P088.eok P089.eok P090.eok \
	     P091.BAS P092.BAS P093.BAS P094.BAS P095.BAS \
	     P091.ok P092.ok P093.ok P094.ok P095.ok \
	     P091.eok P092.eok P093.eok P094.eok P095.eok \
	     P096.BAS P097.BAS P098.BAS P099.BAS P100.BAS \
	     P096.ok P097.ok P098.ok P099.ok P100.ok \
	     P096.eok P097.eok P098.eok P099.eok P100.eok \
	     P101.BAS P102.BAS P103.BAS P104.BAS P105.BAS \
	     P101.ok P102.ok P103.ok P104.ok P105.ok \
	     P101.eok P102.eok P103.eok P104.eok P105.eok \
	     P106.BAS P107.BAS P108.BAS P109.BAS P110.BAS \
	     P106.ok \
	     P106.eok \
	     P111.BAS P112.BAS P113.BAS P114.BAS P115.BAS \
	     P113.ok P114.ok P115.ok \
	     P113.eok P114.eok P115.eok \
	     P116.BAS P117.BAS P118.BAS P119.BAS P120.BAS \
	     P116.ok P117.ok P118.ok P119.ok P120.ok \
	     P116.eok P117.eok P118.eok P119.eok P120.eok \
	     P121.BAS P122.BAS P123.BAS P124.BAS P125.BAS \
	     P121.ok P122.ok P123.ok P124.ok P125.ok \
	     P121.eok P122.eok P123.eok P124.eok P125.eok \
	     P126.BAS P127.BAS P128.BAS P129.BAS P130.BAS \
	     P126.ok P127.ok P128.ok P129.ok P130.ok \
	     P126.eok P127.eok P128.eok P129.eok P130.eok \
	     P131.BAS P132.BAS P133.BAS P134.BAS P135.BAS \
	     P132.ok P133.ok P134.ok P135.ok \
	     P132.eok P133.eok P134.eok P135.eok \
	     P136.BAS P137.BAS P138.BAS P139.BAS P140.BAS \
	     P136.ok P137.ok P138.ok P139.ok P140.ok \
	     P136.eok P137.eok P138.eok P139.eok P140.eok \
	     P141.BAS P142.BAS P143.BAS P144.BAS P145.BAS \
	     P141.ok P142.ok P143.ok P144.ok P145.ok \
	     P141.eok P142.eok P143.eok P144.eok P145.eok \
	     P146.BAS P147.BAS P148.BAS P149.BAS P150.BAS \
	     P146.ok P147.ok P148.ok P149.ok P150.ok \
	     P146.eok P147.eok P148.eok P149.eok P150.eok \
	     P151.BAS P152.BAS P153.BAS P154.BAS P155.BAS \
	     P151.ok P152.ok P153.ok P154.ok P155.ok \
	     P151.eok P152.eok P153.eok P154.eok P155.eok \
	     P156.BAS P157.BAS P158.BAS P159.BAS P160.BAS \
	     P156.ok P157.ok P158.ok P159.ok P160.ok \
	     P156.eok P157.eok P158.eok P159.eok P160.eok \
	     P161.BAS P162.BAS P163.BAS P164.BAS P165.BAS \
	     P161.ok P162.ok P163.ok P164.ok P165.ok \
	     P161.eok P162.eok P163.eok P164.eok P165.eok \
	     P166.BAS P167.BAS P168.BAS P169.BAS P170.BAS \
	     P166.ok P167.ok P168.ok P169.ok P170.ok \
	     P166.eok P167.eok P168.eok P169.eok P170.eok \
	     P171.BAS P172.BAS P173.BAS P174.BAS P175.BAS \
	     P171.ok P172.ok P173.ok P174.ok P175.ok \
	     P171.eok P172.eok P173.eok P174.eok P175.eok \
	     P176.BAS P177.BAS P178.BAS P179.BAS P180.BAS \
	     P176.ok P177.ok P178.ok P179.ok P180.ok \
	     P176.eok P177.eok P178.eok P179.eok P180.eok \
	     P181.BAS P182.BAS P183.BAS P184.BAS P185.BAS \
	     P181.ok P182.ok P183.ok P184.ok P185.ok \
	     P181.eok P182.eok P183.eok P184.eok P185.eok \
	     P186.BAS P187.BAS P188.BAS P189.BAS P190.BAS \
	     P186.ok P187.ok P188.ok P189.ok P190.ok \
	     P186.eok P187.eok P188.eok P189.eok P190.eok \
	     P191.BAS P192.BAS P193.BAS P194.BAS P195.BAS \
	     P191.ok P192.ok P193.ok P194.ok P195.ok \
	     P191.eok P192.eok P193.eok P194.eok P195.eok \
	     P196.BAS P197.BAS P198.BAS P199.BAS P200.BAS \
	     P196.ok P197.ok P198.ok P199.ok P200.ok \
	     P196.eok P197.eok P198.eok P199.eok P200.eok \
	     P201.BAS P202.BAS P203.BAS P204.BAS P205.BAS \
	     P201.ok P202.ok P204.ok P205.ok \
	     P201.eok P202.eok P204.eok P205.eok \
	     P206.BAS P207.BAS P208.BAS \
	     P206.ok P207.ok P208.ok \
	     P206.eok P207.eok P208.eok \
	     printab.BAS printab.ok printab.eok \
	     printspc.BAS printspc.ok printspc.eok \
	     table.BAS table.ok table.eok \
	     truend.BAS truend.ok truend.eok \
	     pow.BAS pow.ok pow.eok

